--- a/src/client/styles/SchoolFilterPage.module.css
+++ b/src/client/styles/SchoolFilterPage.module.css
@@ -71,6 +71,7 @@
   height: calc(100vh - 40px);
   overflow-y: auto;
   box-sizing: initial;
+  border: 0.1rem solid #BEAE88
 }
 
 .cardscontainer {
