--- a/src/client/styles/SchoolFilterPage.module.css
+++ b/src/client/styles/SchoolFilterPage.module.css
@@ -44,7 +44,7 @@
 
 .imagehouse {
   width: 16rem;
-  object-fit: cover; /* Ajusta a imagem para o tamanho do container */
+  object-fit: cover; 
 }
 
 .maincontent {
@@ -79,7 +79,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  overflow-y: auto; /* Garante que você possa rolar caso haja muitos cards */
+  overflow-y: auto; 
 }
 
 .housecard {
