--- a/src/client/styles/card.module.css
+++ b/src/client/styles/card.module.css
@@ -1,4 +1,4 @@
-/* src/Card.module.css */
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 .cardContainer {
@@ -6,7 +6,7 @@
   max-width: 22rem;
   text-align: center;
   padding: 0, 5rem;
-  margin: "10px" auto; /* Centralizar o card horizontalmente */
+  margin: "10px" auto; 
   border: 1px solid #beae88;
   border-radius: 1rem;
   box-shadow: 0px 15px 9px rgba(0, 0, 0, 0.1);
@@ -21,31 +21,31 @@
 
 .cardImage {
   margin-top: 3.25rem;
-  width: 45%; /* Ajustar a largura da imagem */
-  height: auto; /* Manter a proporção da imagem */
+  width: 45%; 
+  height: auto; 
   margin-bottom: 1rem;
 }
 
 .cardText {
-  font-family: 'Times New Roman', Times, serif; /* Fonte Poppins */
-  color: #1b1a1a; /* Cor do texto */
-  position: relative; /* Necessário para posicionar a linha */
-  margin-bottom: 0.25rem; /* Aproximadamente 20px */
+  font-family: 'Times New Roman', Times, serif; 
+  color: #1b1a1a; 
+  position: relative; 
+  margin-bottom: 0.25rem; 
 }
 
 .cardText::after {
   content: "";
   display: block;
   width: 5rem; 
-  height: 0.28rem; /* Aproximadamente 4px */
-  background-color: #807e70; /* Cor da linha */
-  border-radius: 0.225rem; /* Aproximadamente 2px */
-  margin: 0.625rem auto 0; /* Aproximadamente 10px auto 0 */
+  height: 0.28rem;
+  background-color: #807e70;
+  border-radius: 0.225rem; 
+  margin: 0.625rem auto 0; 
 }
 .cardActionArea {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%; /* Ocupa toda a altura do card */
+  height: 100%; 
 }
