--- a/src/client/styles/landing_page.module.css
+++ b/src/client/styles/landing_page.module.css
@@ -1,17 +1,26 @@
 .body {
+  background-image: url('https://wallpapercave.com/wp/wp9166739.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 0rem;
-  background-color: #f1f1f1;
-  margin-top: -21px;
-  margin-left: 0rem;
-  margin-right: 0rem;
+  background-color: #ed2f2f;
+  margin-top: -22px;
+  margin-left: -1rem;
+  margin-right: -1rem;
+  height: 90vh;
 }
 
 .header {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-align: right;
+  display: flex;
+  align-items: center;
+  font-weight: bolder;
+  justify-content: center;
   width: 100%;
   padding: 0 1.25rem;
   margin-bottom: 1.875rem;
@@ -23,12 +32,12 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  gap: 3rem; /* Aumentei o espaçamento entre os itens */
+  gap: 3rem; 
   margin-top: 3.75rem;
 }
 
 .column {
-  flex: 1;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
